[gd_scene load_steps=15 format=2]

[ext_resource path="res://weapon/dynamite/dynamite.png" type="Texture" id=1]
[ext_resource path="res://weapon/dynamite/dynamite explosion.png" type="Texture" id=2]
[ext_resource path="res://weapon/dynamite/DynamiteProjectile.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "explode",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
radius = 12.0
height = 8.0

[node name="DynamiteProjectile" type="Area2D"]
collision_layer = 0
collision_mask = 20
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="DynamiteSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ExplosionAnimation" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -16 )
frames = SubResource( 10 )
animation = "explode"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
rotation = 1.5708
shape = SubResource( 11 )
disabled = true
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="animation_finished" from="ExplosionAnimation" to="." method="_on_ExplosionAnimation_animation_finished"]
